--- a/Assets/UI/Uxml/GameLoseScreen.uxml
+++ b/Assets/UI/Uxml/GameLoseScreen.uxml
@@ -1,7 +1,7 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/Uss/GameWinLoseScreen.uss?fileID=7433441132597879392&amp;guid=6c4f45b42ef6b42449b41fbd641b5ae5&amp;type=3#GameWinLoseScreen" />
     <ui:VisualElement name="game-lose__screen" class="game-win-lose__screen" style="opacity: 1; display: flex;">
-        <ui:VisualElement name="game-lose__container" picking-mode="Ignore" class="game-win-lose__container" style="flex-direction: column; top: 116px;">
+        <ui:VisualElement name="game-lose__container" picking-mode="Ignore" class="game-win-lose__container" style="flex-direction: column; top: 0; position: absolute;">
             <ui:VisualElement name="game-lose__banner-container" picking-mode="Ignore" class="game-win-lose__banner-container" style="width: 100%; height: 100%; flex-direction: row;">
                 <ui:VisualElement name="game-lose__banner-right" picking-mode="Ignore" class="game-win-lose__banner" style="scale: -1 1; transform-origin: center;" />
                 <ui:Label text="DEFEAT" display-tooltip-when-elided="true" name="game-lose__label" picking-mode="Ignore" class="game-win-label game-win-lose__label" />
