--- a/Assets/UI/Uss/InstructorScreen.uss
+++ b/Assets/UI/Uss/InstructorScreen.uss
@@ -329,3 +329,16 @@
 .unity-base-popup-field {
     flex-grow: 1;
 }
+
+.end_pause_buttons {
+    width: 300px;
+    height: 90%;
+    font-size: 50px;
+    -unity-text-align: middle-center;
+    white-space: normal;
+    -unity-font-style: bold;
+    -unity-font: url('project://database/Assets/TextMesh%20Pro/Examples%20&%20Extras/Fonts/Bangers.ttf?fileID=12800000&guid=5dd49b3eacc540408c98eee0de38e0f1&type=3#Bangers');
+    -unity-font-definition: initial;
+    padding-bottom: 16px;
+    -unity-text-outline-width: 1.5px;
+}
