--- a/Assets/UI/Uss/InstructorScreen.uss
+++ b/Assets/UI/Uss/InstructorScreen.uss
@@ -240,6 +240,8 @@
     font-size: 47px;
     -unity-text-outline-color: rgb(255, 255, 255);
     -unity-font-style: bold;
+    -unity-font-definition: initial;
+    -unity-font: url('project://database/Assets/TextMesh%20Pro/Fonts/LiberationSans.ttf?fileID=12800000&guid=e3265ab4bf004d28a9537516768c1c75&type=3#LiberationSans');
 }
 
 .height_picker {
@@ -271,6 +273,8 @@
     font-size: 47px;
     -unity-text-outline-color: rgb(255, 255, 255);
     -unity-font-style: bold;
+    -unity-font: url('project://database/Assets/TextMesh%20Pro/Fonts/LiberationSans.ttf?fileID=12800000&guid=e3265ab4bf004d28a9537516768c1c75&type=3#LiberationSans');
+    -unity-font-definition: initial;
 }
 
 .ingame_configs__label {
@@ -280,7 +284,9 @@
     color: rgb(0, 0, 0);
     font-size: 47px;
     -unity-text-outline-color: rgb(255, 255, 255);
-    -unity-font-style: bold;
+    -unity-font-style: normal;
+    -unity-font-definition: initial;
+    -unity-font: url('project://database/Assets/TextMesh%20Pro/Fonts/LiberationSans.ttf?fileID=12800000&guid=e3265ab4bf004d28a9537516768c1c75&type=3#LiberationSans');
 }
 
 .unity-float-field {
