--- a/Assets/UI/Uxml/InstructorUXML/InstructorScreen.uxml
+++ b/Assets/UI/Uxml/InstructorUXML/InstructorScreen.uxml
@@ -66,11 +66,11 @@
             </ui:VisualElement>
             <ui:VisualElement name="instructor_actions" style="flex-grow: 0; flex-direction: row; flex-shrink: 0; width: 1263px; align-self: center; top: 45px; justify-content: space-around; align-items: stretch; display: flex;">
                 <ui:VisualElement name="auto_zerof_checkbox" style="flex-grow: 0; flex-shrink: 0; width: 621px; flex-direction: row; align-self: auto; align-items: flex-start; justify-content: space-around;">
-                    <ui:VisualElement name="auto_start" style="flex-grow: initial; flex-direction: row; width: 256px; flex-shrink: initial; align-items: center;">
+                    <ui:VisualElement name="auto_start_checkbox" style="flex-grow: initial; flex-direction: row; width: 256px; flex-shrink: initial; align-items: center;">
                         <ui:Label text="Auto Start" name="auto_start_label" class="input_fields__label ingame_configs__label" style="width: 231px; font-size: 40px;" />
                         <ui:Toggle name="auto_start_toggle" class="instrucot_toggle" style="margin-left: 31px;" />
                     </ui:VisualElement>
-                    <ui:VisualElement name="zero_f" style="flex-grow: initial; flex-direction: row; width: 214px; flex-shrink: initial; align-items: center; margin-left: 40px;">
+                    <ui:VisualElement name="zero_f_checkbox" style="flex-grow: initial; flex-direction: row; width: 214px; flex-shrink: initial; align-items: center; margin-left: 40px;">
                         <ui:Label text="ZeroF" name="zero_f_label" class="input_fields__label ingame_configs__label" style="width: 155px; font-size: 40px;" />
                         <ui:Toggle name="zero_f_toggle" class="instrucot_toggle" style="margin-left: 31px;" />
                     </ui:VisualElement>
