--- a/Assets/UI/Uxml/GameWinScreen.uxml
+++ b/Assets/UI/Uxml/GameWinScreen.uxml
@@ -1,16 +1,8 @@
 <ui:UXML xmlns:ui="UnityEngine.UIElements" xmlns:uie="UnityEditor.UIElements" editor-extension-mode="False">
     <Style src="project://database/Assets/UI/Uss/GameWinLoseScreen.uss?fileID=7433441132597879392&amp;guid=6c4f45b42ef6b42449b41fbd641b5ae5&amp;type=3#GameWinLoseScreen" />
     <ui:VisualElement name="game-win__screen" focusable="false" class="game-win-lose__screen" style="opacity: 1; display: flex; visibility: visible;">
-        <ui:VisualElement name="game-win__container" class="game-win-lose__container" style="flex-direction: column; position: absolute; top: -40px;">
-            <ui:VisualElement name="game-win__background" class="game-win-lose__background">
-                <ui:VisualElement name="game-win__background-left" class="game-win-lose__background-left" />
-                <ui:VisualElement name="game-win__background-right" class="game-win-lose__background-right" />
-            </ui:VisualElement>
-            <ui:VisualElement name="game-win__banner-container" class="game-win-lose__banner-container" style="width: 100%; height: 100%; flex-direction: row; justify-content: center;">
-                <ui:VisualElement name="game-win__banner-right" class="game-win-banner game-win-lose__banner" style="scale: -1 1; transform-origin: center; flex-direction: row; background-image: url(&apos;project://database/Assets/UI/Textures/UI_atlas.psd?fileID=-1477758260000540881&amp;guid=68de98d899585b7469e0fb40a0fcbc56&amp;type=3#Header_bg_02&apos;); -unity-slice-left: 1; -unity-slice-top: 1; -unity-slice-right: 1; -unity-slice-bottom: 1; -unity-slice-scale: 0;" />
-                <ui:Label text="Victory" display-tooltip-when-elided="true" name="game-win__label" class="game-win-label game-win-lose__label" style="top: 45%;" />
-            </ui:VisualElement>
-            <ui:Button text="Next level" display-tooltip-when-elided="true" name="game-win__next-button" class="game-win-lose__button" style="background-image: url(&apos;project://database/Assets/UI/Textures/UI_atlas.psd?fileID=2160727794084111844&amp;guid=68de98d899585b7469e0fb40a0fcbc56&amp;type=3#bt_11&apos;);" />
+        <ui:VisualElement name="game-win__banner-right" picking-mode="Ignore" class="game-win-lose__banner" style="scale: 1 1; transform-origin: center; background-image: url(&apos;project://database/Assets/UI/Textures/UI_atlas.psd?fileID=-1477758260000540881&amp;guid=68de98d899585b7469e0fb40a0fcbc56&amp;type=3#Header_bg_02&apos;); width: 50%; height: 50%; -unity-slice-scale: 0; -unity-background-scale-mode: scale-to-fit; -unity-background-image-tint-color: rgb(255, 255, 255); background-color: rgba(255, 255, 255, 0);">
+            <ui:Label text="VICTORY" display-tooltip-when-elided="true" name="game-win__label" picking-mode="Ignore" tabindex="1" class="game-win-label game-win-lose__label" style="font-size: 183px; flex-wrap: nowrap; flex-direction: column; rotate: 0; white-space: nowrap; -unity-font: url(&apos;project://database/Assets/TextMesh%20Pro/Examples%20&amp;%20Extras/Fonts/Bangers.ttf?fileID=12800000&amp;guid=5dd49b3eacc540408c98eee0de38e0f1&amp;type=3#Bangers&apos;); text-overflow: clip; -unity-text-align: middle-center;" />
         </ui:VisualElement>
     </ui:VisualElement>
 </ui:UXML>
